# the-pool

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ThreadPool.cpp  ThreadPool.h  ThreadPoolVersion.h.in
.github/workflows/: build.yml  release.yml
